Fleshed out dark mode, still working out switch bugs and some aesthetic things, along with content ideas

--- a/style.css
+++ b/style.css
@@ -9,3 +9,8 @@ p {
 h1 {
   font-family: 'Merriweather', serif;
 }
+
+#center-console {
+  padding-bottom: 2vh;
+  padding-top: 1vh;
+}
